fix user channels overflowing by adding scrolling

--- a/client/src/components/drawer.css
+++ b/client/src/components/drawer.css
@@ -1,6 +1,10 @@
 .drawer {
+  flex: 0 0 auto;
+
   height: 100%;
   width: 250px;
+  display: flex;
+  flex-direction: column;
   border-right: 2px solid hsl(0, 0%, 85%);
   font-size: 0.9em;
   padding: 0.5em 0;
@@ -31,6 +35,7 @@
 
 .channels {
   padding: 0.5em;
+  overflow-y: auto;
 }
 
 .channels ul {
